--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
   <app-root></app-root>
+
+
   <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
-<script src="./node_modules/preline/dist/preline.js"></script>
+<!-- <script src="./node_modules/preline/dist/preline.js"></script> -->
 </body>
 </html>
